--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,15 +1,16 @@
-SRC_O=main.o 
 DES=kernel.bin
 DIR_Image=../boot/boot.img
+file_O=../lib/kernel/print.o main.o
+GCC:
+	gcc  -I ../lib/kernel -m32 -c -o main.o main.c 
 
-ld: ${SRC_O}
-	ld -m elf_i386 -Ttext 0xc0001500 -e main -o ${DES} main.o 
-	strip --remove-section=.note.gnu.property ${DES}
+
+ld:GCC
+	ld -m elf_i386 -Ttext 0xc0001500 -e main -o ${DES}  ${file_O}
+	# strip --remove-section=.note.gnu.property ${DES}
 	@-rm -rf *.o
 	
 
-%.o:%.c
-	gcc -m32 -c -o $@ $^
 
 
 image:ld
