fixbug 端口索引错误

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,12 +1,12 @@
 DES=kernel.bin
 DIR_Image=../boot/boot.img
-file_O=../lib/kernel/print.o main.o
+file_O=main.o  ../lib/kernel/print.o 
 GCC:
 	gcc  -I ../lib/kernel -m32 -c -o main.o main.c 
 
 
 ld:GCC
-	ld -m elf_i386 -Ttext 0xc0001500 -e main -o ${DES}  ${file_O}
+	ld -m elf_i386 -Ttext 0xc0001500 -e main -o ${DES}  ${file_O} 
 	# strip --remove-section=.note.gnu.property ${DES}
 	@-rm -rf *.o
 	
