代码完善,使用连接脚本进行连接

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,13 +1,17 @@
 DES=kernel.bin
 DIR_Image=../boot/boot.img
-file_O=main.o  ../lib/kernel/print.o 
+
+
+K=../lib/kernel
+K_OBJS=${K}/print.o
+U=../lib/user
+U_OBJS=
 GCC:
 	gcc  -I ../lib/kernel -m32 -c -o main.o main.c 
 
 
 ld:GCC
-	ld -m elf_i386 -Ttext 0xc0001500 -e main -o ${DES}  ${file_O} 
-	# strip --remove-section=.note.gnu.property ${DES}
+	ld -m elf_i386 -T kernel.ld -o ${DES}  main.o ${K_OBJS} ${U_OBJS}
 	@-rm -rf *.o
 	
 
