IDT的建立和初始化

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-    "C_Cpp.errorSquiggles": "enabled"
+    "C_Cpp.errorSquiggles": "enabled",
+    "files.associations": {
+        "*.h": "cpp",
+        "*.S": "asm-collection",
+        "atomic": "c",
+        "cstdint": "c"
+    }
 }
